Work Allocation - Location Finder - New option created using accordion

--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -10,8 +10,9 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (29/07/21)
+      Last updated (27/09/21)
     </h2>
+    <p> Added location finder - Typeahead </p>
     <p> My tasks & Available tasks, 'Due date' replaced by 'Task created'<br> for Judicial users only(3.4)</p>
     <p> Updated Active tasks (3.4) </p>
     <p> Updated Active tasks (3.4) Seperate (NEW PAGES) created for staff with Due date & Priority column</p>
@@ -478,7 +479,7 @@ GOV.UK Prototype Kit
 
     <h3 class="govuk-heading-m" style="color: red;">My access updated<br></h3>
 
-  <!--  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=staff&">My access - tab - New case alert - Pending</a><br>Checked with DS - v3.3</p>
+    <!--  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new?usertype=staff&">My access - tab - New case alert - Pending</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess?usertype=staff&">My access - tab - pending - viewed</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re?usertype=staff&">My access - tab - New case alert - Rejected</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-tcrvd?usertype=staff&">My access - tab - View rejection details</a><br>Checked with DS - v3.3 </p>
@@ -492,6 +493,14 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-assv?usertype=staff&">My access - tab - Assorted type - viewed</a><br>Checked with DS - v3.3</p>
 
   <p class="govuk-body govuk-!-margin-bottom-9"></p>
+
+  <!-- SECTION BREAK -->
+
+  <h2 class="govuk-heading-l">Location finder</h2>
+  <div class="xui-alert-link__number">9  </div>
+  <div class="govuk-!-padding-bottom-6"></div>
+  <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-accordion-only-iac-open?usertype=staff&">Location finder - accordion - only Immigration and Asylum accordion open</a></p>
+
 <!--
     <h2 class="govuk-heading-xl">All Work</h2>
     <h2 class="govuk-heading-m">TASKS - View tasks not yet assigned</h2>
