--- a/app/views/workallocation/pages/wa-mytasks.html
+++ b/app/views/workallocation/pages/wa-mytasks.html
@@ -18,7 +18,7 @@ My work
 {{ govukButton({
   text: "Show work filter",
   classes: "govuk-button--secondary",
-  href: "wa-show-work-filter"
+  href: "wa-show-work-filter-iac-damages"
 }) }}
 
 <div class="hmcts-scrollable-pane">
