--- a/app/views/workallocation/pages/wa-show-work-filter-accordion-only-IAC-and-Damages-open-edit-IAC.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-accordion-only-IAC-and-Damages-open-edit-IAC.html
@@ -64,7 +64,7 @@ My work
             </div>
             <div class="hmcts-filter__heading-action">
               <p>
-                <a class="govuk-link govuk-link--no-visited-state" href="wa-show-work-filter-accordion-only-IAC-and-Damages-open-edit-IAC">Edit</a>
+                <a class="govuk-link govuk-link--no-visited-state" href="wa-show-work-filter-options-zero">Edit</a>
               </p>
             </div>
           </div>
@@ -147,7 +147,7 @@ My work
               </a>
             </li>
           </ul>
-          <!-- <h2 class="govuk-heading-s">Filter by location</h2>
+          <h2 class="govuk-heading-s">Filter by location</h2>
           <div style="width:70%; padding:0 0 20px 0;display:inline-block;">
             <label class="govuk-body" for="location-picker">Search for a hearing venue by name</label>
             <select id="location-picker" name="locationPicker">
@@ -168,8 +168,8 @@ My work
                 href: "wa-show-work-filter-results",
                 classes: "govuk-!-margin-right-3"
               }) }}
-            </div> -->
-            <!-- <h2 class="govuk-heading-s">Types of work</h2>
+            </div>
+            <h2 class="govuk-heading-s">Types of work</h2>
             <p class="govuk-body">Show tasks for the selected type of works:</p>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
@@ -224,7 +224,7 @@ My work
               <div class="govuk-grid-column-one-quarter">
                 <p></p>
               </div>
-            </div> -->
+            </div>
         </div>
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         <div>
@@ -322,7 +322,7 @@ My work
               </a>
             </li>
           </ul>
-          <!-- <h2 class="govuk-heading-s">Filter by location</h2>
+          <h2 class="govuk-heading-s">Filter by location</h2>
           <div style="width:70%; padding:0 0 20px 0;display:inline-block;">
             <label class="govuk-body" for="location-picker">Search for a hearing venue by name</label>
             <select id="location-picker" name="locationPicker">
@@ -343,10 +343,10 @@ My work
                 href: "wa-show-work-filter-results",
                 classes: "govuk-!-margin-right-3"
               }) }}
-            </div> -->
-            <!-- <h2 class="govuk-heading-s">Types of work</h2>
-            <p class="govuk-body">Show tasks for the selected type of works:</p> -->
-            <!-- <div class="govuk-grid-row">
+            </div>
+            <h2 class="govuk-heading-s">Types of work</h2>
+            <p class="govuk-body">Show tasks for the selected type of works:</p>
+            <div class="govuk-grid-row">
               <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
                 <div class="govuk-checkboxes govuk-checkboxes--small">
                   <div class="govuk-checkboxes__item">
@@ -393,7 +393,7 @@ My work
               <div class="govuk-grid-column-one-quarter">
                 <p></p>
               </div>
-            </div> -->
+            </div>
         </div>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
