--- a/app/views/caseaccess/pages/mywork-exeter.html
+++ b/app/views/caseaccess/pages/mywork-exeter.html
@@ -1,7 +1,7 @@
 {% if  data.usertype == 'judiciary'   %}
     {% extends "../layoutjudicial.html" %}
 {% else %}
-    {% extends "../layoutstaff.html" %}
+    {% extends "../layoutstaffplain.html" %}
 {% endif %}
 {% block pageTitle %}
 My work
