Hearings tab updates for testing

--- a/app/views/hearings/pages/iteration3/hearings-tab.html
+++ b/app/views/hearings/pages/iteration3/hearings-tab.html
@@ -88,9 +88,11 @@ Case details
                 <div class="govuk-tabs__panel" id="event" style="padding:0; border:0; min-height: 300px;">
                     <br />
                     <br />
-                    <button class="govuk-button govuk-!-margin-bottom-1" data-module="govuk-button">
+                    <a href="hearing-requirements" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button" style="padding-right: 10px;background-image:none;">
                         Request a hearing
-                    </button>
+                        <svg style="padding-left:5px;vertical-align: middle;" class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+                            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+                        </svg></a>
 
                     <table class="govuk-table">
                         <tbody class="govuk-table__body">
@@ -105,18 +107,18 @@ Case details
 <!--                                <td scope="row" class="govuk-table__cell"><a href="checkyouranswers">View and change</a> <span style="margin:0 16px;"></span> <a href="confirmcancel">Cancel hearing</a></td>-->
 <!--                            </tr>-->
                             <tr class="govuk-table__row">
-                                <td scope="row" class="govuk-table__header">Final hearing</td>
-                                <td scope="row" class="govuk-table__cell">Awaiting date</td>
+                                <td scope="row" class="govuk-table__header">Case management hearing</td>
+                                <td scope="row" class="govuk-table__cell"></td>
                                 <td scope="row" class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey" style="background-color:#eeefef; color:#383f43">Waiting to be listed</strong></td>
 <!--                                <td scope="row" class="govuk-table__cell"></td>-->
-                                <td scope="row" class="govuk-table__cell"><a href="#">View and change</a> <span style="margin:0 16px;"></span> <a href="#">Cancel hearing</a></td>
+                                <td scope="row" class="govuk-table__cell"><a href="hearing-details-pending">View and change</a> <span style="margin:0 16px;"></span> <a href="#">Cancel hearing</a></td>
                             </tr>
                             <tr class="govuk-table__row">
                                 <td scope="row" class="govuk-table__header">Final hearing</td>
                                 <td scope="row" class="govuk-table__cell">12 October 2021</td>
                                 <td scope="row" class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise" style="background-color:#bfe3e0; color:#10403c">Listed</strong> <!--<strong class="govuk-tag govuk-tag--grey" style="background-color:#eeefef; color:#383f43">Change requested</strong>--></td>
 <!--                                <td scope="row" class="govuk-table__cell"></td>-->
-                                <td scope="row" class="govuk-table__cell"><a href="#">View and change</a> <span style="margin:0 16px;"></span> <a href="#">Cancel hearing</a></td>
+                                <td scope="row" class="govuk-table__cell"><a href="hearing-details-listed">View and change</a> <span style="margin:0 16px;"></span> <a href="#">Cancel hearing</a></td>
                             </tr>
 <!--                            <tr class="govuk-table__row">-->
 <!--                                <td scope="row" class="govuk-table__header">Final hearing</td>-->
@@ -140,7 +142,7 @@ Case details
                                 <td scope="row" class="govuk-table__cell">5 September 2021</td>
                                 <td scope="row" class="govuk-table__cell"><strong class="govuk-tag govuk-tag--purple" style="background-color:#dbd5e9; color:#3d2375">Completed</strong></td>
 <!--                                <td scope="row" class="govuk-table__cell">Outcome: Directions made</td>-->
-                                <td scope="row" class="govuk-table__cell"><a href="#">View details</a></td>
+                                <td scope="row" class="govuk-table__cell"><a href="hearing-details-completed">View details</a></td>
                             </tr>
 <!--                            <tr class="govuk-table__row">-->
 <!--                                <td scope="row" colspan="3" class="govuk-table__header"><h2 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-7">Cancelled, postponed or adjourned</h2></td>-->
@@ -150,7 +152,7 @@ Case details
                                 <td scope="row" class="govuk-table__cell">22 October 2021</td>
                                 <td scope="row" class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red" style="background-color:#f6d7d2; color:#942514">Cancelled</strong></td>
 <!--                                <td scope="row" class="govuk-table__cell">Outcome: Lorem Ipsum</td>-->
-                                <td scope="row" class="govuk-table__cell"><a href="#">View details</a></td>
+                                <td scope="row" class="govuk-table__cell"><a href="hearing-details-cancelled">View details</a></td>
                             </tr>
                             <tr class="govuk-table__row">
                                 <td scope="row" class="govuk-table__header">Directions hearing</td>
